--- a/VacTrackerClient/src/app/home/home.component.html
+++ b/VacTrackerClient/src/app/home/home.component.html
@@ -8,13 +8,12 @@
       </div>
 
       <div class="input-group  mb-3 px-5 search">
-        <form action="" method="post">
+        <form [formGroup]="form" (submit)="search()">
 
           <h4 class="text-center">টিকা গ্রহনের তথ্য জানুন</h4>
-          <input type="text" name="User_id" class="form-control border-3 px-5"
+          <input formControlName="userId" type="text" class="form-control border-3 px-5"
                  placeholder="আইডি সার্চ করুন">
           <div class="text-center mt-2">
-            <span>without log in<a routerLink="/vacwithoutlogin" href="#"> Here</a></span>
             <button class="btn py-1 detail-btn rounded-2 border-3" type="submit" name="btn_1"> সার্চ</button>
           </div>
         </form>
@@ -24,24 +23,21 @@
     <div class="col-md-6 d-flex justify-content-center align-items-center right-side">
 
       <div class="input-box">
-        <form action="" method="post">
+        <form [formGroup]="loginForm" (submit)="login()">
           <h2 class="text-center mb-5">লগ ইন</h2>
           <div class="input-field d-flex flex-column mb-3">
-            <input type="text" class="form-control input rounded-2 p-1 border-3" name="User_id"
-                   id="userId" placeholder="ইউজার আইডি
-                                " required autocomplete="off">
+            <input formControlName="phone" type="text" class="form-control input rounded-2 p-1 border-3" placeholder="ফোন নাম্বার" required autocomplete="off">
           </div>
           <div class="input-field d-flex flex-column mb-3">
-            <input type="password" class="form-control input rounded-2 p-1 border-3"
-                   name="User_password" id="password" placeholder="পাসওয়ার্ড" required>
+            <input formControlName="password" type="password" class="form-control input rounded-2 p-1 border-3" placeholder="পাসওয়ার্ড" required>
           </div>
           <div class="input-field d-flex flex-column">
             <button class="btn detail-btn" type="submit" name="btn_2">লগ ইন</button>
           </div>
         </form>
         <div class="register">
-          <span>Don't have an account? <a routerLink="/user" href="#">Register Here</a></span>
-          <span>vaccinator<a routerLink="/vaccinator" href="#"> Here</a></span>
+          <span>অ্যাকাউন্ট নেই? এখানে <a routerLink="/registration" >রেজিস্টার করুন</a></span>
+
         </div>
       </div>
     </div>
