--- a/VacTrackerClient/src/app/registration/registration.component.html
+++ b/VacTrackerClient/src/app/registration/registration.component.html
@@ -1,45 +1,46 @@
 <div class="container d-flex justify-content-center align-items-center min-vh-100">
-  <div class="row outer-div w-75">
-    <div class="col-md-6 left-side items-center">
-      <img class="logo" src="assets/images/logo.png" alt="logo">
-      <div class="vacText w-50">
-        <h2>ভ্যাকস্ট্যাটাস</h2>
-        <p>টিকা ট্র্যাকার ওয়েবসাইট</p>
-      </div>
-    </div>
-
-    <div class="col-md-6 d-flex justify-content-center align-items-center right-side">
-
-      <div class="input-box">
-        <form action="" method="post">
-          <h2 class="text-center mb-5">Registration</h2>
-          <div class="input-field d-flex flex-column mb-3">
-            <input type="text" class="form-control input rounded-2 p-1 border-3" name="User_id"
-                   id="userId" placeholder="ইউজার আইডি
-                                " required autocomplete="off">
-          </div>
-          <div class="input-field d-flex flex-column mb-3">
-            <input type="text" class="form-control input rounded-2 p-1 border-3" name="User_id"
-                   id="userName" placeholder="ইউজার name
-                                " required autocomplete="off">
-          </div>
-          <div class="input-field d-flex flex-column mb-3">
-            <input type="number" class="form-control input rounded-2 p-1 border-3"
-                   name="User_password" id="number" placeholder="number" required>
-          </div>
-          <div class="input-field d-flex flex-column mb-3">
-            <input type="password" class="form-control input rounded-2 p-1 border-3"
-                   name="User_password" id="password" placeholder="পাসওয়ার্ড" required>
-          </div>
-          <div class="input-field d-flex flex-column">
-            <button class="btn detail-btn" type="submit" name="btn_2">Register</button>
-          </div>
-        </form>
-        <div class="register">
-          <span>Don't have an account? <a routerLink="/user" href="#">Register Here</a></span>
-          <span>vaccinator<a routerLink="/vaccinator" href="#"> Here</a></span>
+    <div class="row outer-div w-75">
+        <div class="col-md-6 left-side items-center">
+            <img class="logo" src="assets/images/logo.png" alt="logo">
+            <div class="vacText w-50">
+                <h2>ভ্যাকস্ট্যাটাস</h2>
+                <p>টিকা ট্র্যাকার ওয়েবসাইট</p>
+            </div>
         </div>
-      </div>
+
+        <div class="col-md-6 d-flex justify-content-center align-items-center right-side">
+
+            <div class="input-box">
+                <form [formGroup]="registerForm" (submit)="register()">
+                    <h2 class="text-center mb-5">রেজিস্ট্রেশন</h2>
+                    <div class="input-field d-flex flex-column mb-3">
+                        <input formControlName="name" type="text" class="form-control input rounded-2 p-1 border-3"
+                               placeholder="নাম" required autocomplete="off">
+                    </div>
+                    <div class="input-field d-flex flex-column mb-3">
+                        <input formControlName="phone" type="text" class="form-control input rounded-2 p-1 border-3"
+                               placeholder="ফোন নাম্বার" required autocomplete="off">
+                    </div>
+                    <div class="input-field d-flex flex-column mb-3">
+                        <select formControlName="userType" class="form-control input rounded-2 p-1 border-3"required>
+                            <option value="" disabled selected>ইউজার টাইপ নির্বাচন করুন</option>
+                            <option value="vaccinator">Vaccinator</option>
+                            <option value="vaccineRecipient">Vaccine Recipient </option>
+                        </select>
+                    </div>
+                    <div class="input-field d-flex flex-column mb-3">
+                        <input formControlName="password" type="password"
+                               class="form-control input rounded-2 p-1 border-3"
+                               placeholder="পাসওয়ার্ড" required autocomplete="off">
+                    </div>
+                    <div class="input-field d-flex flex-column mb-3">
+                        <button class="btn detail-btn" type="submit" name="btn_2">রেজিস্টার করুন</button>
+                    </div>
+                </form>
+                <div class="register mt-3">
+                    <span>ইতিমধ্যে একাউন্ট আছে? <a routerLink="/">লগইন পেজ এ যান </a></span>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
 </div>
