--- a/VacTrackerClient/src/app/home/home.component.html
+++ b/VacTrackerClient/src/app/home/home.component.html
@@ -26,7 +26,7 @@
         <form [formGroup]="loginForm" (submit)="login()">
           <h2 class="text-center mb-5">লগ ইন</h2>
           <div class="input-field d-flex flex-column mb-3">
-            <input formControlName="phone" type="text" class="form-control input rounded-2 p-1 border-3" placeholder="ফোন নাম্বার" required autocomplete="off">
+            <input formControlName="userId" type="text" class="form-control input rounded-2 p-1 border-3" placeholder="ইউজার আইডি" required autocomplete="off">
           </div>
           <div class="input-field d-flex flex-column mb-3">
             <input formControlName="password" type="password" class="form-control input rounded-2 p-1 border-3" placeholder="পাসওয়ার্ড" required>
